// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should match enzyme shallow snapshot 1`] = `
<button
  disabled={false}
  href=""
  onClick={[Function]}
  style={
    Object {
      "textDecoration": undefined,
    }
  }
>
  Test 1
</button>
`;

exports[`Link should match enzyme shallow snapshot 2`] = `
<button
  disabled={true}
  href=""
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "underline",
    }
  }
>
  Test 1
</button>
`;
